# cmake_minimum_required(VERSION 3.0.0)
# project(test_opengl VERSION 0.1.0)

# include(CTest)
# enable_testing()

# add_executable(test_opengl ) # will fill this line with files name

# find_package(OpenGL REQUIRED)
# find_package(GLEW REQUIRED)
# target_link_libraries(test_opengl glfw)
# target_link_libraries(test_opengl GL GLU)
# target_link_libraries(test_opengl GLEW::GLEW)

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
# set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
# set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
# include(CPack)

